--- a/Learning About Webpack/package.json
+++ b/Learning About Webpack/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "webpack": "^3.6.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^2.9.1"
   }
 }
