--- a/Learning About Webpack/package.json
+++ b/Learning About Webpack/package.json
@@ -9,6 +9,7 @@
   },
   "author": "",
   "license": "ISC",
+  "browserlist": "<1 %, last 2 versions",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -16,6 +17,9 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-stage-2": "^7.8.3",
     "babel-loader": "^8.1.0",
+    "css-loader": "^4.3.0",
+    "postcss-loader": "^4.0.0",
+    "style-loader": "^1.2.1",
     "webpack": "^3.6.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^2.9.1"
